* DeepCloner now supports cloning fields in a hierarchy.
* Added a new project called PowerMock Utils. This project includes various utilities that may be useful during testing. The first utility is a "synchronizer" whose purpose is to wait for an asynchronous operation to complete. Example usage: "block(atMost(5, SECONDS), until(repositorySize(), equalsTo(3));"
* Fixed a serious flaw in the Wildcard matcher which resulted in that classes located in packages containing "junit.", "java.", "sun." in their name was never prepared for test (issue 225).

Change log 1.3.5 (2009-12-13)
-----------------------------
* Removed EasyMock maven dependencies from the JUnit legacy runner since they're not needed.
* Fixed a bug in WhiteboxImpl#findUniqueConstructorOrThrowException which caused an additional constructor to be found when a class was prepared for test (issue 189).
* Fixed the maven assembly so that it now produces two full jar files, one for Mockito and one for EasyMock. These contains the sources as well.
* Mockito extension API now supports Mockito 1.8.1 & 1.8.2.
* java.lang.Object#getClass is no longer mockable by default. The reason is that it may lead to an unexpected method invocation exception using EasyMock in some equal implementations. It's possible to override this behavior.
* DeepCloner should now support cloning of static final fields on SUN JVM.
* Fixed a minor bug in Whitebox#getInternalState so that a better error message is given when the instance argument is null (issue 205).
* Fixed some typos in the javadoc of PowerMockito#verifyNew (issue 187).
* Fixed so that Whitebox#getInternalState(..) now supports passing in super types as field-type critiera (issue 210).
* Fixed so that Whitebox#getInternalState(..) and Whitebox#setInternalState(..) doesn't cause NPE when too many fields matched the criteria (issue 211).
* Basic support for TestNG (5.11) implemented.
* Fixed so that Whitebox#invokeMethod now works for overridden methods.